# pkg/handler/handler.go
@@ -36,12 +36,12 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		auth.POST("/resend", h.resend)
 		auth.POST("/set", h.set)
 		auth.POST("/recover", h.passwordRecover)
+		auth.POST("/update-email-verification-token", h.updateEmailVerificationToken)
 	}
 
 	account := router.Group("/account", h.userIdentity)
 	{
 		account.POST("/update", h.update)
-		account.POST("/update-email-verification-token", h.updateEmailVerificationToken)
 		account.GET("/details", h.details)
 	}
 
